Se conecto a mongodb y puedo guardar documentos con numeros enteros.
Estoy teniendo problemas con staticcheck, estoy viendo si pusheando esta el mismo problema o es tema de mi compu.
